Fixes #37